Добавил модуль exerciseInfo

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
         <title>Дневник тренировок</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="node_modules/milligram/dist/milligram.min.css">
     </head>
     <body>
         <div class="app">
+            <div class="exercise-info">
+                <div class="exercise-info__name"></div>
+                <div class="exercise-info__description"></div>
+                <div class="exercise-info__video-tutorial-link"></div>
+                <div class="exercise-info__variable-parameter-name"></div>
+            </div>
             <form class="exercise-add-form">
                 <label>
-                    Название упражнения или развиваемого параметра
+                    Название упражнения или развиваемого параметра. Пример "Жим лежа, максимум за подход", "Бег, км за пробежку"
                     <input type="text" class="exercise-add-form__name"></input>
                 </label>
                 <label>
@@ -17,13 +24,43 @@
                     <textarea class="exercise-add-form__description" rows="6" cols="50"></textarea>
                 </label>
                 <label>
+                    Ссылка на видео-пример по упражнению(если есть)
                     <input type="text" class="exercise-add-form__video-tutorial-link"></input>
                 </label>
                 <label>
-                    <input type="text" class="exercise-add-form__units"></input>
+                    Название переменного параметра в тренировке (вес, высота запрыгивания). Пример "Штанга, кг", "Утяжелители для бега, кг"
+                    <input type="text" class="exercise-add-form__variable-parameter-name"></input>
                 </label>
                 <button class="exercise-add-form__add-button">Добавить</button>
             </form>
         </div>
+
+        <script src="blocks/exerciseAddForm/exerciseAddForm.js"></script>
+        <script src="blocks/exerciseInfo/exerciseInfo.js"></script>
+
+        <script type="text/javascript">
+            (function () {
+                'use strict';
+                // import
+                let ExerciseAddForm = window.ExerciseAddForm;
+                let ExerciseInfo = window.ExerciseInfo;
+
+
+
+                let exerciseAddFormElArray = [...document.querySelectorAll('.exercise-add-form')];
+                exerciseAddFormElArray.forEach(el => {
+                    new ExerciseAddForm({
+                        el: el
+                    });
+                })
+
+                let exerciseInfoElArray = [...document.querySelectorAll('.exercise-info')];
+                exerciseInfoElArray.forEach(el => {
+                    new ExerciseInfo({
+                        el: el
+                    });
+                })
+            })();
+        </script>
     </body>
 </html>
