--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
         <title>Дневник тренировок</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="node_modules/milligram/dist/milligram.min.css">
+        <!--<link rel="stylesheet" href="node_modules/milligram/dist/milligram.min.css">-->
+
+        <!-- Google Fonts -->
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+
+        <!-- CSS Reset -->
+        <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+
+        <!-- Milligram CSS minified -->
+        <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
     </head>
     <body>
         <div class="app">
