--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
         <!-- Milligram CSS minified -->
         <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+
+
+        <link rel="stylesheet" href="blocks/exerciseAddForm/exerciseAddForm.css">
+        <link rel="stylesheet" href="blocks/exerciseInfo/exerciseInfo.css">
+        <link rel="stylesheet" href="blocks/app/app.css">
     </head>
     <body>
         <div class="app">
