Добавлена форма и модуль ввода результата одного подхода. Переименованы папки и файлы.

--- a/index.html
+++ b/index.html
@@ -18,21 +18,25 @@
 
         <link rel="stylesheet" href="blocks/exerciseAddForm/exerciseAddForm.css">
         <link rel="stylesheet" href="blocks/exerciseInfo/exerciseInfo.css">
+        <link rel="stylesheet" href="blocks/exerciseResultForm/exerciseResultForm.css">
+        <link rel="stylesheet" href="blocks/trainingProgress/trainingProgress.css">
         <link rel="stylesheet" href="blocks/app/app.css">
     </head>
     <body>
         <div class="app">
-            <div class="exercise-info">
-            </div>
-            <div class="exercise-add-form">
-
-            </div>
+            <div class="exercise-info"></div>
+            <div class="exercise-add-form"></div>
+            <div class="training-progress"></div>
+            <div class="exercise-result-form"></div>
         </div>
 
         <script src="blocks/exerciseAddForm/exerciseAddForm.pug.js"></script>
         <script src="blocks/exerciseAddForm/exerciseAddForm.js"></script>
         <script src="blocks/exerciseInfo/exerciseInfo.pug.js"></script>
         <script src="blocks/exerciseInfo/exerciseInfo.js"></script>
+        <script src="blocks/exerciseResultForm/exerciseResultForm.pug.js"></script>
+        <script src="blocks/exerciseResultForm/exerciseResultForm.js"></script>
+
 
         <script src="blocks/app/app.js"></script>
 
