Готово заполнение списка введенных/записанных упражнений

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <script src="blocks/exerciseInfo/exerciseInfo.js"></script>
         <script src="blocks/exerciseResultForm/exerciseResultForm.pug.js"></script>
         <script src="blocks/exerciseResultForm/exerciseResultForm.js"></script>
-
+        <script src="blocks/trainingProgress/trainingProgress.pug.js"></script>
+        <script src="blocks/trainingProgress/trainingProgress.js"></script>
 
         <script src="blocks/app/app.js"></script>
 
