--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <script src="blocks/exerciseResultForm/exerciseResultForm.js"></script>
         <script src="blocks/trainingProgress/trainingProgress.pug.js"></script>
         <script src="blocks/trainingProgress/trainingProgress.js"></script>
+        <script src="dataService/dataService.js"></script>
 
         <script src="blocks/app/app.js"></script>
 
